--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
             </div>
             <div class="product-info">
                 <h1>{{ product }}</h1>
-                <p v-if="inventory > 10">In stock</p>
                 <p v-if="inStock">In stock</p>
                 <p v-else>Out of Stock</p>
                 <ul>
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
-                <div v-for="variant in variants">
+                <div v-for="variant in variants" :key="variant.variantId">
                     <p>{{ variant.variantColor }}</p>
                 </div>
-                <ul>
-                    <li v-for="size in sizes">{{ size }}</li>
-                </ul>
+                <div class="cart">
+                    <p>Cart({{ cart }})</p>
+                </div>
+                <button v-on:click="addToCart">Add to cart</button>
+                <button v-if="cart > 0" v-on:click="deleteToCart">Delete to cart</button>
+                <div v-for="variant in variants" :key="variant.variantId">
+                    <p @mouseover="updateProduct(variant.variantImage)">
+                    {{ variant.variantColor }}
+                    </p>
+                </div>
             </div>
         </div>
     </div>
