--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
     <div id="app">
-        <product :premium="premium"></product>
+        <div class="cart">
+            <p>Cart({{ cart.length }})</p>
+            <ul>
+                <li v-for="itemId in cart" :key="itemId">
+                    {{ itemId }}
+                    <button @click="removeFromCart(itemId)">Remove</button>
+                </li>
+            </ul>
+        </div>
+        <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product>
     </div>
 </body>
 </html>
